log
Mon 16 Oct 2023 01:38:44 AM UTC: 
 heap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:7: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   39 |       return;
      |       ^~~~~~
heap.c:36:7: note: declared here
   36 | Heap* createHeap() {
      |       ^~~~~~~~~~
heap.c:45:7: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   45 |       return;
      |       ^~~~~~
heap.c:36:7: note: declared here
   36 | Heap* createHeap() {
      |       ^~~~~~~~~~
test.c: In function ‘createHeap’:
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
test.c:293: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8b56ece
Mon 16 Oct 2023 01:39:21 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:7: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   39 |       return;
      |       ^~~~~~
heap.c:36:7: note: declared here
   36 | Heap* createHeap() {
      |       ^~~~~~~~~~
heap.c:45:7: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   45 |       return;
      |       ^~~~~~
heap.c:36:7: note: declared here
   36 | Heap* createHeap() {
      |       ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9477689
Mon 16 Oct 2023 01:40:44 AM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|3
total_score: 10/70
127c551
Mon 16 Oct 2023 01:45:05 AM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
test.c: In function ‘heap_top’:
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
test.c:293: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4668c22
